--- a/GeekShopping.ProductAPI/appsettings.Development.json
+++ b/GeekShopping.ProductAPI/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
-  "MySQLConnection": {
-    "MySQLConnection": "Server=auditoria-server.mysql.database.azure.com; Port=3306; Database=geek_shopping_product_api; Uid=admin_auditoria; Pwd=Auditoria2022; SslMode=Preferred;"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=auditoria-server.mysql.database.azure.com; Port=3306; Database=geek_shopping_product_api; Uid=admin_auditoria; Pwd=Auditoria2022; SslMode=Preferred;"
   },
   "Logging": {
     "LogLevel": {
