--- a/GeekShopping.ProductAPI/appsettings.json
+++ b/GeekShopping.ProductAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Server=auditoria-server.mysql.database.azure.com; Port=3306; Database=geek_shopping_product_api; Uid=admin_auditoria; Pwd=Auditoria2022; SslMode=Preferred;"
   },
   "Logging": {
     "LogLevel": {
